rm old permgen param, comment scalatest pom config